<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_margin="10dp"
    android:layout_height="wrap_content">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:text="@string/are_you_sure"
        android:textSize="18sp"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:text="@string/do_you_want_to_cancel_n_please_read_cancellation_policy"
        android:textSize="18sp"
        />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:gravity="center"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btnYes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/button_text_color"
            android:textSize="18sp"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_marginEnd="80dp"
            android:textColor="@color/text_color"
            android:text="@string/yes"
            />
        <Button
            android:id="@+id/btnNo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/button_color"
            android:textSize="18sp"
            android:textStyle="bold"
            android:gravity="center"
            android:textColor="@color/bc_colour"
            android:text="@string/no"

            />

    </LinearLayout>


</LinearLayout>