<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:background="@color/bc_colour"
    tools:context=".activities.ConfirmBookingActivity">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_vehicle_confirm_activity"
        android:layout_width="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_height="?attr/actionBarSize">
        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/confirm_booking"
            android:textColor="@color/text_color"
            android:textSize="@dimen/toolbar_title_text_size"
            android:textStyle="bold" />
    </androidx.appcompat.widget.Toolbar>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:elevation="@dimen/card_view_elevation"
        android:layout_marginTop="@dimen/hot_offer_margin"
        android:layout_marginBottom="@dimen/confirm_booking_et_dimen_top"
        android:layout_marginStart="@dimen/authentication_screen_til_marginStartEnd"
        android:layout_marginEnd="@dimen/authentication_screen_til_marginStartEnd"
        app:cardCornerRadius="@dimen/card_view_corner_radius">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal"
            >
            <ImageView
                android:id="@+id/iv_vehicle_main_image"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:scaleType="fitXY"
                android:layout_weight="1"
                android:src="@drawable/hot_offer"
                android:layout_marginRight="@dimen/btn_book_now_margin_from_side"
                />
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_marginStart="@dimen/btn_book_now_margin_from_side"
                android:orientation="vertical"
                >
                <TextView
                    android:id="@+id/tv_vehicle_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:layout_marginTop="3dp"
                    android:text="@string/top_speed"
                    android:textColor="@color/text_color"
                    android:textSize="@dimen/name_vehicle_text_size"
                    android:textStyle="bold" />
                <TextView
                    android:id="@+id/tv_vehicle_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:layout_marginTop="3dp"
                    android:text="@string/top_speed"
                    android:textColor="@color/text_color"
                    android:textSize="@dimen/name_vehicle_text_size"
                    android:textStyle="bold" />
            </LinearLayout>

        </LinearLayout>
    </androidx.cardview.widget.CardView>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/authentication_screen_til_marginStartEnd"
        android:layout_marginTop="@dimen/confirm_booking_et_dimen_top"
        android:layout_marginEnd="@dimen/authentication_screen_til_marginStartEnd">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_license"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_license_number"
            android:inputType="textEmailAddress"
            android:textSize="@dimen/et_text_size" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/authentication_screen_til_marginStartEnd"
        android:layout_marginTop="@dimen/confirm_booking_et_dimen_top"
        android:layout_marginEnd="@dimen/authentication_screen_til_marginStartEnd">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_gov_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_gov_id_number"
            android:inputType="textEmailAddress"
            android:textSize="@dimen/et_text_size" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/authentication_screen_til_marginStartEnd"
        android:layout_marginTop="@dimen/confirm_booking_et_dimen_top"
        android:layout_marginEnd="@dimen/authentication_screen_til_marginStartEnd">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_pick_up_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:hint="@string/pick_up_date"
            android:inputType="textEmailAddress"
            android:textSize="@dimen/et_text_size" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/authentication_screen_til_marginStartEnd"
        android:layout_marginTop="@dimen/confirm_booking_et_dimen_top"
        android:layout_marginEnd="@dimen/authentication_screen_til_marginStartEnd">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_return_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/return_date"
            android:inputType="textEmailAddress"
            android:focusable="false"
            android:textSize="@dimen/et_text_size" />
    </com.google.android.material.textfield.TextInputLayout>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:elevation="@dimen/card_view_elevation"
        android:layout_marginTop="@dimen/hot_offer_margin"
        android:layout_marginBottom="@dimen/confirm_booking_et_dimen_top"
        android:layout_marginStart="@dimen/authentication_screen_til_marginStartEnd"
        android:layout_marginEnd="@dimen/authentication_screen_til_marginStartEnd"
        app:cardCornerRadius="@dimen/card_view_corner_radius">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                >
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/features_text_size"
                    android:gravity="start"
                    android:padding="@dimen/confirm_booking_et_dimen_top"
                    android:layout_weight="1"
                    android:textColor="@color/text_color"
                    android:layout_marginTop="5dp"
                    android:text="@string/per_day_car_rent"
                    android:textStyle="normal"
                    />
                <TextView
                    android:id="@+id/tv_vehicle_price_per_day"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/features_text_size"
                    android:padding="@dimen/confirm_booking_et_dimen_top"
                    android:gravity="end"
                    android:layout_weight="1"
                    android:layout_marginStart="@dimen/btn_book_now_margin_from_side"
                    android:textColor="@color/text_color"
                    android:layout_marginTop="5dp"
                    android:text="@string/price"
                    android:textStyle="normal"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                >
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/features_text_size"
                    android:gravity="start"
                    android:padding="@dimen/confirm_booking_et_dimen_top"
                    android:layout_weight="1"
                    android:textColor="@color/text_color_type"
                    android:layout_marginTop="5dp"
                    android:text="@string/total_payment"
                    android:textStyle="bold"
                    />
                <TextView
                    android:id="@+id/tv_vehicle_total_price"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/features_text_size"
                    android:padding="@dimen/confirm_booking_et_dimen_top"
                    android:gravity="end"
                    android:layout_weight="1"
                    android:layout_marginStart="@dimen/btn_book_now_margin_from_side"
                    android:textColor="@color/text_color_type"
                    android:layout_marginTop="5dp"
                    android:text="@string/price"
                    android:textStyle="bold"
                    />
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/btn_proceed_to_payment_now"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/authentication_screen_til_marginStartEnd"
        android:layout_marginEnd="@dimen/authentication_screen_til_marginStartEnd"
        android:layout_marginBottom="@dimen/confirm_booking_et_dimen_top"
        android:layout_margin="@dimen/btn_book_now_margin_from_side"
        android:text="@string/proceed_to_payment"
        android:textColor="@color/bc_colour"
        android:background="@drawable/shape_button_rounded"
        android:foreground="?attr/selectableItemBackground"
        android:textStyle="bold"

       />
</LinearLayout>