<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bc_colour"
    android:orientation="vertical"
    android:padding="@dimen/main_screen_content_padding"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".activities.MainActivity">
    <androidx.cardview.widget.CardView
        android:id="@+id/cv_hot_offer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:elevation="@dimen/card_view_elevation"
        app:cardCornerRadius="@dimen/card_view_corner_radius"
        android:layout_margin="@dimen/hot_offer_margin"
        >
        <ImageView
            android:id="@+id/iv_hot_offer"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:scaleType="fitXY"
            android:src="@drawable/hot_offer"
            />
    </androidx.cardview.widget.CardView>
    <LinearLayout
        android:id="@+id/rl_filter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_margin="@dimen/hot_offer_margin"
        >
            <TextView
                android:id="@+id/tv_all_vehicles"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:text="@string/all"
                android:textColor="@color/bc_colour"
                android:textStyle="bold"
                android:gravity="center"
                android:layout_margin="@dimen/hot_offer_margin"
                android:background="@drawable/tv_background_fill"
                android:textSize="@dimen/no_vehicles_available_text_size"
                />

            <TextView
                android:id="@+id/tv_all_cars"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:text="@string/car"
                android:textStyle="bold"
                android:gravity="center"
                android:textColor="@color/text_color"
                android:layout_margin="@dimen/hot_offer_margin"
                android:background="@drawable/tv_background_no_fill"
                android:textSize="@dimen/no_vehicles_available_text_size"
                />
        <TextView
            android:id="@+id/tv_all_bikes"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:text="@string/bike"
            android:textStyle="bold"
            android:gravity="center"
            android:textSize="@dimen/no_vehicles_available_text_size"
            android:layout_margin="@dimen/hot_offer_margin"
            android:textColor="@color/text_color"
            android:background="@drawable/tv_background_no_fill"
            />
    </LinearLayout>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:elevation="@dimen/card_view_elevation"
        android:layout_marginTop="@dimen/hot_offer_margin"
        app:cardCornerRadius="@dimen/card_view_corner_radius">
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_vehicles_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone" />

        <TextView
            android:id="@+id/tv_no_vehicles_available"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/vehicle_details_divider_end_height"
            android:gravity="center"
            android:text="@string/no_vehicles_available"
            android:textColor="@color/text_color"
            android:textSize="@dimen/no_vehicles_available_text_size" />

    </androidx.cardview.widget.CardView>
</LinearLayout>
